--- a/quiz/index.html
+++ b/quiz/index.html
@@ -115,7 +115,7 @@
       document.getElementById("terceira").classList.remove("hide")
     }
     function redirect() {
-      location.href = "https://protocolozerobarriga.com" // SEU LINK AQUI
+      location.href = "https://florenciafernandez.site" // SEU LINK AQUI
     }
   </script>
 </body>
