--- a/quiz/index.html
+++ b/quiz/index.html
@@ -73,36 +73,36 @@
     <div class="black">
       <div id="primeira">
         <div class="question">
-          <h1>Pergunta 1</h1>
-          <p>Você realmente quer descobrir esse segredo?</p>
+          <h1>Pregunta 1 de 3</h1>
+          <p>¿Usted sabe algo sobre el Método Anti-Grasa de la isla de Cat-Bá?</p>
         </div>
         <div class="answer">
-          <button class="btn" onclick="segunda()">SIM</button>
-          <button class="btn" onclick="segunda()">NÃO</button>
+          <button class="btn" onclick="segunda()">SÍ</button>
+          <button class="btn" onclick="segunda()">NO</button>
         </div>
       </div>
       <div id="segunda" class="hide">
         <div class="question">
-          <h1>Pergunta 2</h1>
-          <p>Você promete não revelar com ninguém?</p>
+          <h1>Pregunta 2 de 3</h1>
+          <p>¿Quisiera reducir tallas sin preocuparse por hacer ejercício y sin dejar de comer?</p>
         </div>
         <div class="answer">
-          <button class="btn" onclick="terceira()">SIM</button>
-          <button class="btn" onclick="terceira()">NÃO</button>
+          <button class="btn" onclick="terceira()">SÍ</button>
+          <button class="btn" onclick="terceira()">NO</button>
         </div>
       </div>
       <div id="terceira" class="hide">
         <div class="question">
-          <h1>Pergunta 3</h1>
-          <p>O vídeo a seguir tem um limite para pouquíssimas pessoas verem ao mesmo tempo... Você pretende ver até o fim?</p>
+          <h1>Pregunta 3 de 3</h1>
+          <p>Si por medio de un video conocieras todo el método con la solución definitiva... ¿Estarías dispuesta a verlo hasta el final?</p>
         </div>
         <div class="answer">
-          <button class="btn" onclick="redirect()">SIM</button>
-          <button class="btn" onclick="redirect()">NÃO</button>
+          <button class="btn" onclick="redirect()">SÍ, DESEO!</button>
+          <button class="btn" onclick="redirect()">NO, GRACIAS</button>
         </div>
       </div>
     </div>
-    <p style="text-align: center; font-weight: bold;">© 2022 – Todos os direitos reservados. Este site não faz parte nem é endossado pelo Facebook. Facebook é uma marca comercial da Facebook, Inc.</p>
+    <p style="text-align: center; font-weight: bold;">© 2022 – Todos los derechos reservados.ireitos reservados.</p>
     <p style="text-align: center; font-weight: bold;"><a href="https://protocolozerobarriga.com/termos" style="color: black;">Termos de Uso</a> | <a href="https://protocolozerobarriga.com/privacidade" style="color: black;">Política de Privacidade</a></p>
   </div>
   <script>
