--- a/quiz/index.html
+++ b/quiz/index.html
@@ -103,7 +103,7 @@
       </div>
     </div>
     <p style="text-align: center; font-weight: bold;">© 2022 – Todos los derechos reservados.ireitos reservados.</p>
-    <p style="text-align: center; font-weight: bold;"><a href="https://protocolozerobarriga.com/termos" style="color: black;">Termos de Uso</a> | <a href="https://protocolozerobarriga.com/privacidade" style="color: black;">Política de Privacidade</a></p>
+    <p style="text-align: center; font-weight: bold;"><a href="https://protocolozerobarriga.com/termos" style="color: black;">Términos de Uso</a> | <a href="https://protocolozerobarriga.com/privacidade" style="color: black;">Política de Privacidad</a></p>
   </div>
   <script>
     function segunda() {
