--- a/pvc/index.html
+++ b/pvc/index.html
@@ -37,11 +37,11 @@
       t.src=v;s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)}(window, document,'script',
       'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '3352683951621936');
+      fbq('init', '554430389508104');
       fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=3352683951621936&ev=PageView&noscript=1"
+      src="https://www.facebook.com/tr?id=554430389508104&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
     
@@ -79,7 +79,7 @@
           <div class="col-lg-8">
             <div class="fb-comments" style="margin-top: 5px;">
               <div class="fb-comments-header">
-                <span>21 comentarios</span>
+                <span>21 comentários</span>
               </div>
               <div class="fb-comments-wrapper" id="2">
                 <table class="fb-comments-comment">
