--- a/pvc/index.html
+++ b/pvc/index.html
@@ -37,11 +37,11 @@
       t.src=v;s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)}(window, document,'script',
       'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '554430389508104');
+      fbq('init', '614561236343528');
       fbq('track', 'PageView');
     </script>
     <noscript><img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=554430389508104&ev=PageView&noscript=1"
+      src="https://www.facebook.com/tr?id=614561236343528&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
     
@@ -56,7 +56,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Descoberta da Tailândia Recupera a Visão Nítida e Cristalina em 21 Dias</b></h3>
+            <h3 class="my-4"><b></b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_62b5d482072e14000a1d3ffb">var s=document.createElement("script");s.src="https://scripts.converteai.net/a5be3ce2-68c5-4cec-af81-04414f0838b8/players/62b5d482072e14000a1d3ffb/player.js",s.async=!0,document.head.appendChild(s);</script>
