--- a/cda/index.html
+++ b/cda/index.html
@@ -34,11 +34,11 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', 'INSERIR PIXEL');
+fbq('init', '1012690922746759');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=INSERIR PIXEL&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=1012690922746759&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Meta Pixel Code -->
 
